--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Matheus Antonio <matheus.antonio208@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.1"
+    "@types/node": "^17.0.21",
+    "git-commit-msg-linter": "^4.1.1",
+    "typescript": "^4.6.2"
   }
 }
