--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Matheus Antonio <matheus.antonio208@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "eslint": "^7.12.1",
@@ -15,7 +16,12 @@
     "eslint-plugin-promise": "^5.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
