chore: add jest configs and scripts

--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,7 +1,8 @@
 {
 
     "hooks": {
-        "pre-commit": "eslint"
+        "pre-commit": "eslint",
+        "pre-push": "npm run test:ci"
     }
 
 }
