feat: ensure BcryptAdapter returns a hash on success

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Matheus Antonio <matheus.antonio208@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/validator": "^13.7.1",
@@ -31,6 +32,7 @@
     "test:ci": "npm test -- --coverage"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.7.0"
   }
 }
