--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.21",
@@ -22,10 +23,12 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "sucrase": "^3.20.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -35,6 +38,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "validator": "^13.7.0"
   }
