--- a/package.json
+++ b/package.json
@@ -6,29 +6,29 @@
   "author": "Matheus Antonio <matheus.antonio208@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@shelf/jest-mongodb": "^2.2.1", //✅
-    "@types/bcrypt": "^5.0.0", //⛔
-    "@types/express": "^4.17.13", //✅
-    "@types/jest": "^27.4.1", //✅
-    "@types/mongodb": "^4.0.7", //✅
-    "@types/node": "^17.0.21", //✅
-    "@types/supertest": "^2.0.11", //✅
-    "@types/validator": "^13.7.1", //⛔
-    "@typescript-eslint/eslint-plugin": "^4.0.1", //✅
-    "eslint": "^7.12.1", //✅
-    "eslint-config-standard-with-typescript": "^21.0.1", //✅
-    "eslint-plugin-import": "^2.22.1", //✅
-    "eslint-plugin-node": "^11.1.0", //⛔
-    "eslint-plugin-promise": "^5.0.0", //✅
-    "git-commit-msg-linter": "^4.1.1", //✅
-    "husky": "^7.0.4", //✅
-    "jest": "^27.5.1", //✅
-    "jest-cli": "^27.5.1", //✅
-    "lint-staged": "^12.3.5", //✅
-    "sucrase": "^3.20.3", //✅
-    "supertest": "^6.2.2", //✅
-    "ts-jest": "^27.1.3", //✅
-    "typescript": "^4.6.2" //✅
+    "@shelf/jest-mongodb": "^2.2.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^17.0.21",
+    "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.7.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint": "^7.12.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0",
+    "git-commit-msg-linter": "^4.1.1",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1",
+    "lint-staged": "^12.3.5",
+    "sucrase": "^3.20.3",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "sucrase-node src/main/server.ts",
@@ -42,6 +42,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
+    "fast-glob": "^3.2.11",
     "mongodb": "^4.4.1",
     "validator": "^13.7.0"
   }
