--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "target": "es2019",
         "esModuleInterop": true,
         "allowJs": true   ,
-        "strict": false
+        "strict": false,
+        "downlevelIteration": true
     },
     "noLib": true,
     "noResolve": true,
